Updated biotimesheet view for leave

--- a/views/bioTimesheet/index.hbs
+++ b/views/bioTimesheet/index.hbs
@@ -136,6 +136,13 @@
                         return Math.floor(roundedValue).toFixed(1);
                     }
                 },},
+                {title:"Leave Status", field:"LeaveID", hozAlign:"left",mutatorData:function(value,data){
+                    if (value == "NULL") {
+                        return "P";
+                    } else {
+                        return value;
+                    }
+                },},
                 {title:"Branch", field:"BranchName"},
                 {title:"Department", field:"DepartmentName"},
                 {title:"Staff Type", field:"UserCategoryName"},
