--- a/views/bioTimesheet/index.hbs
+++ b/views/bioTimesheet/index.hbs
@@ -137,7 +137,7 @@
                     }
                 },},
                 {title:"Leave Status", field:"LeaveID", hozAlign:"left",mutatorData:function(value,data){
-                    if (value == "") {
+                    if (!value) {
                         return "P";
                     } else {
                         return value;
