--- a/views/bioTimesheet/index.hbs
+++ b/views/bioTimesheet/index.hbs
@@ -132,7 +132,7 @@
                         return data.LeaveID;
                     } 
                      console.log(`Value is ${value}`)
-                    const roundedValue = parseFloat((value / 60.0).toFixed(2));
+                    const roundedValue = parseFloat((value / 60.00).toFixed(2));
                     console.log(`roundedValue is ${roundedValue}`)
                     let numberStr = roundedValue.toString();
                     let parts = numberStr.split('.');
@@ -183,26 +183,17 @@
                     if (data.LeaveID) {
                         return data.LeaveID;
                     } 
-                    console.log(`Value is ${value}`)
-                    const roundedValue = parseFloat((value / 60.0).toFixed(2));
-                    console.log(`roundedValue is ${roundedValue}`)
-                    let numberStr = roundedValue.toString();
-                    let parts = numberStr.split('.');
-                    console.log(`parts is ${parts}`)
-                    let workHourMinutes = parseInt(parts[1], 10)
-                    console.log(`workHourMinutes is ${workHourMinutes}`)
-
-                    if ( workHourMinutes >= 25 && workHourMinutes < 75 ) {
-                        const floorValue = Math.floor(roundedValue);
-                        console.log(`Return Value is ${(floorValue + 0.5).toFixed(1)}`)
-                        return (floorValue + 0.5).toFixed(1);
-                    } else if (workHourMinutes >= 75) {
-                        const floorValue = Math.floor(roundedValue);
-                        console.log(`Return Value is ${(floorValue + 1).toFixed(1)}`)
-                        return (floorValue + 1).toFixed(1);
+                    const hourMinutes = parseFloat((value / 60.0).toFixed(2));
+                    let hourMinutesStr = hourMinutes.toString();
+                    let hourMinutes = hourMinutesStr.split('.');
+                    let hour = parseInt(hourMinutes[0])
+                    let minutes = value-(hour*60);
+                    if ( minutes >= 15 && minutes < 45 ) {
+                        return (hour + 0.5).toFixed(1);
+                    } else if (minutes >= 45) {
+                        return (hour + 1).toFixed(1);
                     }else{
-                        console.log(`Return Value is ${Math.floor(roundedValue).toFixed(1)}`)
-                        return Math.floor(roundedValue).toFixed(1);
+                        return hour.toFixed(1);
                     }
                 },},
                 {title:"Branch", field:"BranchName"},
