--- a/views/bioTimesheet/index.hbs
+++ b/views/bioTimesheet/index.hbs
@@ -131,11 +131,8 @@
                     if (data.LeaveID) {
                         return data.LeaveID;
                     } 
-                    let hourMinutes = parseFloat((value / 60.0).toFixed(2));
-                    let hourMinutesStr = hourMinutes.toString();
-                    let hourMinutesArray = hourMinutesStr.split('.');
-                    let hour = parseInt(hourMinutesArray[0])
-                    let minutes = value-(hour*60);
+                    let hour = value / 60;
+                    let minutes = value % 60;
                     if ( minutes >= 15 && minutes < 45 ) {
                         return (hour + 0.5).toFixed(1);
                     } else if (minutes >= 45) {
@@ -174,11 +171,8 @@
                     if (data.LeaveID) {
                         return data.LeaveID;
                     } 
-                    let hourMinutes = parseFloat((value / 60.0).toFixed(2));
-                    let hourMinutesStr = hourMinutes.toString();
-                    let hourMinutesArray = hourMinutesStr.split('.');
-                    let hour = parseInt(hourMinutesArray[0])
-                    let minutes = value-(hour*60);
+                    let hour = value / 60;
+                    let minutes = value % 60;
                     if ( minutes >= 15 && minutes < 45 ) {
                         return (hour + 0.5).toFixed(1);
                     } else if (minutes >= 45) {
