--- a/views/employees/hourDedudctionPage.hbs
+++ b/views/employees/hourDedudctionPage.hbs
@@ -65,7 +65,7 @@
             layout:"fitColumns", //fit columns to width of table (optional)
             paginationSizeSelector:[10, 25, 30,31, 50, 100, 500, 1000, 5000],
             columns:[ //Define Table Columns
-                {title:"Row Num", field:"Id", width:150},
+                {title:"Row Num", field:"RowNum", width:150},
                 {title:"Employee ID", field:"UserID", hozAlign:"left"},
                 {title:"Employee Name", field:"UserName"},
                 {title:"Hour Deduction / Day", field:"HoursPerDay",editor:"input", editorParams:{search:true,selectContents:true,elementAttributes:{maxlength:"4"},},},
