--- a/views/employees/hourDedudctionPage.hbs
+++ b/views/employees/hourDedudctionPage.hbs
@@ -123,7 +123,7 @@
             let Id = row.getData("Id").Id;
             let UserID = row.getData("UserID").UserID;
             let HoursPerDay = row.getData("HoursPerDay").HoursPerDay;
-            HoursPerDay = HoursPerDay.toFixed(1)
+            HoursPerDay = parseFloat(HoursPerDay).toFixed(1)
             let FromDate = row.getData("FromDate").FromDate;
             let ToDate = row.getData("ToDate").ToDate;
             let EmployeeId = document.querySelector('#employeeId').value;
