--- a/views/employees/hourDedudctionPage.hbs
+++ b/views/employees/hourDedudctionPage.hbs
@@ -174,6 +174,7 @@
             const schema = joi.object({
                 RowNum: joi.number(),
                 HoursPerDay: joi.number().min(0).max(24).precision(2).required(),
+                UserID: joi.string(),
                 UserName: joi.string(),
                 FromDate: joi.string().pattern(datePattern).required(),
                 ToDate: joi.string().pattern(datePattern).required(),
