Added Horizontal Report view, route, controller

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -41,6 +41,7 @@
             <li><a class="dropdown-item" href="/erp-transactions/status">Completed ERP Sync</a></li>
             <li><a class="dropdown-item" href="/erp-transactions/settings">ERP Sync Setting</a></li>
             <li><a class="dropdown-item" href="/erp-transactions/push-selected">Push Scheduled Timesheet</a></li>
+            <li><a class="dropdown-item" href="/erp-transactions/horizontal-report/pending-data">ERP Timesheet Horizontal</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
