--- a/views/erpTransaction/horizontal_report.hbs
+++ b/views/erpTransaction/horizontal_report.hbs
@@ -185,21 +185,24 @@
 
             return new Date(year, month, 0).getDate();
         }
-        switch (daysInCurrentMonth()){
-            case 30:
-                pendingErpTable.hideColumn(31)
-                break;
-            case 29:
-                pendingErpTable.hideColumn(31)
-                pendingErpTable.hideColumn(30)
-                break;
-            case 28:
-                pendingErpTable.hideColumn(31)
-                pendingErpTable.hideColumn(30)
-                pendingErpTable.hideColumn(29)
-                break;
-        }
+        pendingErpTable.on("tableBuilt", function(){
+            switch (daysInCurrentMonth()){
+                case 30:
+                    pendingErpTable.hideColumn("31")
+                    break;
+                case 29:
+                    pendingErpTable.hideColumn("31")
+                    pendingErpTable.hideColumn("30")
+                    break;
+                case 28:
+                    pendingErpTable.hideColumn("31")
+                    pendingErpTable.hideColumn("30")
+                    pendingErpTable.hideColumn("29")
+                    break;
+            }
 
+        });
+        
         let temppendingErpTable = new Tabulator("#temppendingErpTable", {
             columns:[
                 {title:"Sl#", field:"example", formatter:"rownum"},
