--- a/views/bioTimesheet/biotimesheet_horizontal_report.hbs
+++ b/views/bioTimesheet/biotimesheet_horizontal_report.hbs
@@ -1,5 +1,4 @@
-{{!-- THIS PAGE FOR VIEW AND VERIFY EVERY DAY ATTENDANCE --}}
-<div class="row">
+<div class="row justify-content-start">
     <div class="col-2">
         <button class="btn btn-outline-success" type="button" id="update_table">Update Table</button>
     </div>
@@ -11,13 +10,20 @@
     </div>
 </div>
 
+<div id="loading-indicator">
+  <div class="spinner-border text-primary" role="status">
+    <span class="sr-only"></span>
+  </div>
+</div>
+
 <div class="mt-2" id="bioTimesheetTable"></div>
 <div class="mt-2" id="tempbioTimesheetTable" hidden></div>
+
 
 <input type="text" value="{{session.user.EmployeeId}}" id="employeeId" hidden>
 <input type="text" value="{{session.user.Department}}" id="department" hidden>
 
-<!-- Modal -->
+<!-- Filter Modal -->
 <div class="modal fade " id="filter_modal" tabindex="-1" aria-labelledby="filter_modal_label" aria-hidden="true">
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
@@ -100,10 +106,10 @@
 
 <script>
     $(document).ready(async function (){
-        let bioTimesheetTable = new Tabulator("#bioTimesheetTable", {
+         let bioTimesheetTable = new Tabulator("#bioTimesheetTable", {
             pagination:true,
             paginationMode:"remote", 
-            ajaxURL:"/api/bio-timesheet",
+            ajaxURL:"/api/bio-timesheet/horizontal-report/pending-data",
             ajaxParams: function(){
                 let EmployeeId = $("#emp_id").val()
                 let FromDate=$("#from_date").val()?$("#from_date").val()+" 00:00:00.000":''
@@ -121,75 +127,68 @@
             paginationSizeSelector:[10, 25, 30,31, 50, 100, 500, 1000, 5000],
             columns:[
                 {title:"Sl#", field:"example", formatter:"rownum"},
-                {title:"Employee Id", field:"UserID", width:150},
-                {title:"Attendance Date", field:"PDate",hozAlign:"center",mutatorData:function(value, data){
-                    return value.split("T")[0];
-                },},
-                {title:"Job Code", field:"JobCode", hozAlign:"left"},
-                {title:"Total Hours", field:"TotalJobTime",mutatorData:function(value,data){
-                    if (data.LeaveID) {
-                        return data.LeaveID;
-                    } 
-                    let hour = Math.floor(value / 60);
-                    let minutes = value % 60;
-                    if ( minutes >= 15 && minutes < 45 ) {
-                        return (hour + 0.5).toFixed(1);
-                    } else if (minutes >= 45) {
-                        return (hour + 1).toFixed(1);
-                    }else{
-                        return hour.toFixed(1);
-                    }
-                },},
-                {title:"Leave Status", field:"LeaveID", hozAlign:"left",mutatorData:function(value,data){
-                    if (!value) {
-                        return "P";
-                    } else {
-                        return value;
-                    }
-                },},
-                {title:"Branch", field:"BranchName"},
+                {title:"Employee ID", field:"UserID"},
+                {title:"Job Code", field:"JobCode", hozAlign:"center"},
+                {title:"26", field:"26"},
+                {title:"27", field:"27"},
+                {title:"28", field:"28"},
+                {title:"29", field:"29"},
+                {title:"30", field:"30"},
+                {title:"31", field:"31"},
+                {title:"01", field:"01"},
+                {title:"02", field:"02"},
+                {title:"03", field:"03"},
+                {title:"04", field:"04"},
+                {title:"05", field:"05"},
+                {title:"06", field:"06"},
+                {title:"07", field:"07"},
+                {title:"08", field:"08"},
+                {title:"09", field:"09"},
+                {title:"10", field:"10"},
+                {title:"11", field:"11"},
+                {title:"12", field:"12"},
+                {title:"13", field:"13"},
+                {title:"14", field:"14"},
+                {title:"15", field:"15"},
+                {title:"16", field:"16"},
+                {title:"17", field:"17"},
+                {title:"18", field:"18"},
+                {title:"19", field:"19"},
+                {title:"20", field:"20"},
+                {title:"21", field:"21"},
+                {title:"22", field:"22"},
+                {title:"23", field:"23"},
+                {title:"24", field:"21"},
+                {title:"25", field:"25"},
                 {title:"Department", field:"DepartmentName"},
-                {title:"Staff Type", field:"UserCategoryName"},
-                {title:"Category", field:"EmployeeCategoryName"},
+                {title:"User Category", field:"UserCategoryName"},
                 {title:"Designation", field:"DesignationName"},
                 {title:"Section", field:"SectionName"},
-                {title:"Created At", field:"CreatedAt",hozAlign:"center",mutatorData:function(value, data){
-                    return value.split("T")[0];
-                },}
             ],
         });
+        
+        function daysInCurrentMonth() {
+            const now = new Date();
+            const year = now.getFullYear();
+            const month = now.getMonth() + 1; // getMonth() returns 0-based month index, so add 1
+            return new Date(year, month, 0).getDate();
+        }
+        bioTimesheetTable.on("tableBuilt", function(){
+            switch (daysInCurrentMonth()){
+                case 30:
+                    bioTimesheetTable.hideColumn("31")
+                    break;
+                case 29:
+                    bioTimesheetTable.hideColumn("31")
+                    bioTimesheetTable.hideColumn("30")
+                    break;
+                case 28:
+                    bioTimesheetTable.hideColumn("31")
+                    bioTimesheetTable.hideColumn("30")
+                    bioTimesheetTable.hideColumn("29")
+                    break;
+            }
 
-        let TempbioTimesheetTable = new Tabulator("#tempbioTimesheetTable", {
-            columns:[
-                {title:"Employee Id", field:"UserID", width:150},
-                {title:"Attendance Date", field:"PDate",hozAlign:"center",mutatorData:function(value, data){
-                    return value.split("T")[0];
-                },},
-                {title:"Job Code", field:"JobCode", hozAlign:"left"},
-                {title:"Total Hours", field:"TotalJobTime",mutatorData:function(value,data){
-                    if (data.LeaveID) {
-                        return data.LeaveID;
-                    } 
-                    let hour = Math.floor(value / 60);
-                    let minutes = value % 60;
-                    if ( minutes >= 15 && minutes < 45 ) {
-                        return (hour + 0.5).toFixed(1);
-                    } else if (minutes >= 45) {
-                        return (hour + 1).toFixed(1);
-                    }else{
-                        return hour.toFixed(1);
-                    }
-                },},
-                {title:"Branch", field:"BranchName"},
-                {title:"Department", field:"DepartmentName"},
-                {title:"Staff Type", field:"UserCategoryName"},
-                {title:"Category", field:"EmployeeCategoryName"},
-                {title:"Designation", field:"DesignationName"},
-                {title:"Section", field:"SectionName"},
-                {title:"Created At", field:"CreatedAt",hozAlign:"center",mutatorData:function(value, data){
-                    return value.split("T")[0];
-                },}
-            ],
         });
         
         $("#search_submit").click(function(e){
@@ -203,13 +202,58 @@
             let EmployeeCategoryId=$('#employee_category').val()
             let DesignationId=$('#designation_id').val()
             let SectionId=$('#section_id').val()
-            bioTimesheetTable.setData("/api/bio-timesheet", 
+            bioTimesheetTable.setData("/api/bio-timesheet/horizontal-report/pending-data", 
                 {page:"1", pageSize:"31",EmployeeId,FromDate,ToDate,JobCode,DepartmentId,UserCategoryId,EmployeeCategoryId,DesignationId,SectionId}
             );
         });
+
         $("#update_table").click(function(e){
             bioTimesheetTable.setData("/api/bio-timesheet/update-timesheet", {page:"1", pageSize:"31"});
         });
+
+        let TempbioTimesheetTable = new Tabulator("#tempbioTimesheetTable", {
+            columns:[
+                {title:"Sl#", field:"example", formatter:"rownum"},
+                {title:"Employee ID", field:"UserID"},
+                {title:"Job Code", field:"JobCode", hozAlign:"center"},
+                {title:"26", field:"26"},
+                {title:"27", field:"27"},
+                {title:"28", field:"28"},
+                {title:"29", field:"29"},
+                {title:"30", field:"30"},
+                {title:"31", field:"31"},
+                {title:"01", field:"01"},
+                {title:"02", field:"02"},
+                {title:"03", field:"03"},
+                {title:"04", field:"04"},
+                {title:"05", field:"05"},
+                {title:"06", field:"06"},
+                {title:"07", field:"07"},
+                {title:"08", field:"08"},
+                {title:"09", field:"09"},
+                {title:"10", field:"10"},
+                {title:"11", field:"11"},
+                {title:"12", field:"12"},
+                {title:"13", field:"13"},
+                {title:"14", field:"14"},
+                {title:"15", field:"15"},
+                {title:"16", field:"16"},
+                {title:"17", field:"17"},
+                {title:"18", field:"18"},
+                {title:"19", field:"19"},
+                {title:"20", field:"20"},
+                {title:"21", field:"21"},
+                {title:"22", field:"22"},
+                {title:"23", field:"23"},
+                {title:"24", field:"21"},
+                {title:"25", field:"25"},
+                {title:"Department", field:"DepartmentName"},
+                {title:"User Category", field:"UserCategoryName"},
+                {title:"Designation", field:"DesignationName"},
+                {title:"Section", field:"SectionName"},
+            ],
+        });
+
         $("#download_table").click(function(e){
             e.preventDefault();
             let EmployeeId = $("#emp_id").val()
@@ -222,17 +266,17 @@
             let DesignationId=$('#designation_id').val()
             let SectionId=$('#section_id').val()
             $.ajax({
-                url: '/api/bio-timesheet/download-timesheet',
+                url: '/api/bio-timesheet/horizontal-report/pending-data/download-timesheet',
                 data:{EmployeeId,FromDate,ToDate,JobCode,DepartmentId,UserCategoryId,EmployeeCategoryId,DesignationId,SectionId}
             }).done(function (data) {
                 if(data.status =="ok"){
                     TempbioTimesheetTable.setData(data.data);
-                    TempbioTimesheetTable.download("csv", "timesheet.csv", {delimiter:","})
+                    TempbioTimesheetTable.download("csv", "horizontal_timesheet.csv", {delimiter:","})
                 }else{
                     alert("Failed to download")
                 }
                 
-            });
+        });
         });
         flatpickr("#from_date", {dateFormat: "Y-m-d"});
         flatpickr("#to_date", {dateFormat: "Y-m-d"});
@@ -250,7 +294,6 @@
             $('#section_id').val('')
             $("#search_submit").click()
         })
-  
     })
     
 </script>
