--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -51,6 +51,7 @@
             <li><a class="dropdown-item" href="/jobs/attendance-correction">Attendance Correction</a></li>
             <li><a class="dropdown-item" href="/jobs/attendance-correction-history">Attendance Correction History</a></li>
             <li><a class="dropdown-item" href="/jobs/timesheet-correction">Pending Timesheet Correction Applications</a></li>
+            <li><a class="dropdown-item" href="/bio-timesheet/horizontal-report/pending-data">Biometric Timesheet Horizontal</a></li>
             
           </ul>
         </li>
