--- a/views/bioTimesheet/biotimesheet_horizontal_report.hbs
+++ b/views/bioTimesheet/biotimesheet_horizontal_report.hbs
@@ -160,6 +160,10 @@
                 {title:"23", field:"23"},
                 {title:"24", field:"21"},
                 {title:"25", field:"25"},
+                {title:"Total", field:"total",mutatorData:function(value, data){
+                    console.log(data)
+                    return 100;
+                },},
                 {title:"Department", field:"DepartmentName"},
                 {title:"User Category", field:"UserCategoryName"},
                 {title:"Designation", field:"DesignationName"},
