--- a/views/bioTimesheet/biotimesheet_horizontal_report.hbs
+++ b/views/bioTimesheet/biotimesheet_horizontal_report.hbs
@@ -161,11 +161,16 @@
                 {title:"24", field:"21"},
                 {title:"25", field:"25"},
                 {title:"Total", field:"total",mutatorData:function(value, data){
+                    let total = 0.0;
                     for (const property in data) {
-                    console.log(`${property}: ${data[property]}`);
+
+                        if(parseInt(property) && parseFloat(data[property])){
+                            console.log(`${property}: ${data[property]}`);
+                            total = total+data[property]
+                        }
                     }
 
-                    return 100;
+                    return total;
                 },},
                 {title:"Department", field:"DepartmentName"},
                 {title:"User Category", field:"UserCategoryName"},
