--- a/views/erpTransaction/horizontal_report.hbs
+++ b/views/erpTransaction/horizontal_report.hbs
@@ -192,8 +192,8 @@
         function daysInCurrentMonth() {
             const now = new Date();
             const year = now.getFullYear();
-            const month = now.getMonth() + 1; // getMonth() returns 0-based month index, so add 1
-
+             let month = now.getMonth(); // getMonth() returns 0-based month index, so add 1
+            month = month==0?12:month;
             return new Date(year, month, 0).getDate();
         }
         pendingErpTable.on("tableBuilt", function(){
@@ -250,6 +250,16 @@
                 {title:"23", field:"23"},
                 {title:"24", field:"21"},
                 {title:"25", field:"25"},
+                {title:"Total", field:"total",mutatorData:function(value, data){
+                    let totalWorkHours = 0.0;
+                    for (const property in data) {
+                        let workHours = parseFloat(data[property])
+                        if(parseInt(property) && workHours ){
+                            totalWorkHours = totalWorkHours + workHours;
+                        }
+                    }
+                    return totalWorkHours;
+                },},
                 {title:"Department", field:"DepartmentName"},
                 {title:"User Category", field:"UserCategoryName"},
                 {title:"Designation", field:"DesignationName"},
