--- a/views/bioTimesheet/biotimesheet_horizontal_report.hbs
+++ b/views/bioTimesheet/biotimesheet_horizontal_report.hbs
@@ -128,6 +128,7 @@
             columns:[
                 {title:"Sl#", field:"example", formatter:"rownum"},
                 {title:"Employee ID", field:"UserID"},
+                {title:"Name", field:"Name"},
                 {title:"Job Code", field:"JobCode", hozAlign:"center"},
                 {title:"26", field:"26"},
                 {title:"27", field:"27"},
@@ -227,6 +228,7 @@
             columns:[
                 {title:"Sl#", field:"example", formatter:"rownum"},
                 {title:"Employee ID", field:"UserID"},
+                {title:"Name", field:"Name"},
                 {title:"Job Code", field:"JobCode", hozAlign:"center"},
                 {title:"26", field:"26"},
                 {title:"27", field:"27"},
