--- a/views/bioTimesheet/biotimesheet_horizontal_report.hbs
+++ b/views/bioTimesheet/biotimesheet_horizontal_report.hbs
@@ -226,7 +226,7 @@
 
         let TempbioTimesheetTable = new Tabulator("#tempbioTimesheetTable", {
             columns:[
-                {title:"Sl#", field:"example", formatter:"rownum"},
+                 {title:"Sl#", field:"rownum"},
                 {title:"Employee ID", field:"UserID"},
                 {title:"Name", field:"Name"},
                 {title:"Job Code", field:"JobCode", hozAlign:"center"},
