--- a/views/erpTransaction/horizontal_report.hbs
+++ b/views/erpTransaction/horizontal_report.hbs
@@ -252,7 +252,7 @@
         
         let temppendingErpTable = new Tabulator("#temppendingErpTable", {
             columns:[
-                {title:"Sl#", field:"rownum", formatter:"rownum"},
+                {title:"Sl#", field:"rownum"},
                 {title:"Employee ID", field:"HcmWorker_PersonnelNumber"},
                 {title:"Job Code", field:"projId", hozAlign:"center"},
                 {title:"26", field:"26"},
@@ -367,7 +367,7 @@
         
         let tempExceptionTable = new Tabulator("#tempExceptionTable", {
             columns:[
-                {title:"Sl#", field:"rownum", formatter:"rownum"},
+                {title:"Sl#", field:"rownum"},
                 {title:"Employee ID", field:"HcmWorker_PersonnelNumber"},
                 {title:"Job Code", field:"projId", hozAlign:"center"},
                 {title:"26", field:"26"},
