--- a/views/bioTimesheet/biotimesheet_horizontal_report.hbs
+++ b/views/bioTimesheet/biotimesheet_horizontal_report.hbs
@@ -15,7 +15,7 @@
     <span class="sr-only"></span>
   </div>
 </div>
-
+<div class="mt-2" id="timeDateDisplay"><h3>From: 26-05-2024 To: 18-06-2024</h3></div>
 <div class="mt-2" id="bioTimesheetTable"></div>
 <div class="mt-2" id="tempbioTimesheetTable" hidden></div>
 
