--- a/views/bioTimesheet/biotimesheet_horizontal_report.hbs
+++ b/views/bioTimesheet/biotimesheet_horizontal_report.hbs
@@ -8,6 +8,7 @@
     <div class="col-2">
         <button class="btn btn-outline-success" type="button" id="download_table">Download Table</button>
     </div>
+    <div class="col-2" id="timeDateDisplay"><h6>From: 26-05-2024 To: 18-06-2024</h6></div>
 </div>
 
 <div id="loading-indicator">
@@ -15,7 +16,6 @@
     <span class="sr-only"></span>
   </div>
 </div>
-<div class="mt-2" id="timeDateDisplay"><h3>From: 26-05-2024 To: 18-06-2024</h3></div>
 <div class="mt-2" id="bioTimesheetTable"></div>
 <div class="mt-2" id="tempbioTimesheetTable" hidden></div>
 
