--- a/views/bioTimesheet/biotimesheet_horizontal_report.hbs
+++ b/views/bioTimesheet/biotimesheet_horizontal_report.hbs
@@ -8,7 +8,7 @@
     <div class="col-2">
         <button class="btn btn-outline-success" type="button" id="download_table">Download Table</button>
     </div>
-    <div class="col-4" id="timeDateDisplay"><h6><span id="timeDateDisplaySpan"></span></h6></div>
+    <div class="col-4" id="timeDateDisplay"><h6 id="timeDateDisplaySpan"></h6></div>
 </div>
 
 <div id="loading-indicator">
@@ -219,7 +219,7 @@
                 {page:"1", pageSize:"500",EmployeeId,FromDate,ToDate,JobCode,DepartmentId,UserCategoryId,EmployeeCategoryId,DesignationId,SectionId}
             ).then(function() {
                 console.log(`From: ${FromDate} To: ${ToDate}`)
-                $("#timeDateDisplaySpan").val(`From: ${FromDate} To: ${ToDate}`)
+                $("#timeDateDisplaySpan").val(`From: ${$("#from_date").val()} To: ${$("#to_date").val()}`)
             });
         });
 
