--- a/views/bioTimesheet/biotimesheet_horizontal_report.hbs
+++ b/views/bioTimesheet/biotimesheet_horizontal_report.hbs
@@ -219,7 +219,7 @@
                 {page:"1", pageSize:"500",EmployeeId,FromDate,ToDate,JobCode,DepartmentId,UserCategoryId,EmployeeCategoryId,DesignationId,SectionId}
             ).then(function() {
                 console.log(`From: ${FromDate} To: ${ToDate}`)
-                $("#timeDateDisplaySpan").val(`From: ${$("#from_date").val()} To: ${$("#to_date").val()}`)
+                $("#timeDateDisplaySpan").text(`From: ${$("#from_date").val()} To: ${$("#to_date").val()}`)
             });
         });
 
