Added bio-timesheet comparison logics

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -52,7 +52,7 @@
             <li><a class="dropdown-item" href="/jobs/attendance-correction-history">Attendance Correction History</a></li>
             <li><a class="dropdown-item" href="/jobs/timesheet-correction">Pending Timesheet Correction Applications</a></li>
             <li><a class="dropdown-item" href="/bio-timesheet/horizontal-report/pending-data">Biometric Timesheet Horizontal</a></li>
-            
+            <li><a class="dropdown-item" href="/bio-timesheet/compare-data">Compare Biometric Data with ERP</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
