updated bio-timesheet comparison logics

--- a/views/bioTimesheet/bioTimesheet-compare.hbs
+++ b/views/bioTimesheet/bioTimesheet-compare.hbs
@@ -202,6 +202,7 @@
             let FromDate=$("#from_date").val()?$("#from_date").val()+" 00:00:00.000":''
             let ToDate=$("#to_date").val()?$("#to_date").val()+" 00:00:00.000":''
             let JobCode=$('#job_code').val()
+            console.log($('#department_id').val())
             let DepartmentId=$('#department_id').val()
             let UserCategoryId=$('#user_category').val()
             let EmployeeCategoryId=$('#employee_category').val()
